--- a/cw-project/src/Compononent/Navbar.css
+++ b/cw-project/src/Compononent/Navbar.css
@@ -1,5 +1,80 @@
 .nav-bar{
-    border: 3px solid red;
+    /* border: 3px solid rgb(6, 0, 128); */
     width: 100%;
-    height: 60px;
+    height: 70px;
+    display: flex;
+    background: #171a26ed;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    position: fixed;
+    opacity: 80%;
+    
 }
+
+.nav-box2{
+    /* border: 3px solid white; */
+    display: flex;
+    width: 40%;
+    justify-content: space-between;
+    padding: 0px 8%;
+}
+.nav-box2 div{
+    font-family: Inter-Bold, "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+    font-size: 18px;
+    text-align: center;
+    line-height: 22px;
+    letter-spacing: normal;
+    color: white;
+    padding-left: 15%;
+    font-weight: bold;
+
+}
+
+.imgBox{
+    /* border: 3px solid white; */
+    width: 10%;
+    margin-left: 1%;
+}
+
+.imgBox img{
+    width: 100%;
+}
+
+.nav-box3{
+    /* border: 3px solid white; */
+    margin-right: -13%;
+}
+
+.nav-box3 button{
+    border: 2px solid white;
+    width: 100%;
+    color:  white;
+    
+}
+.login-img{
+    /* border:  3px solid white; */
+    margin-right: -16%;
+    
+}
+.login-img img{
+    /* border:  3px solid white; */
+    width: 60%;
+    
+}
+.cart-img{
+    /* border:  3px solid white; */
+    margin-right: 2%;
+}
+.cart-img img{
+    /* border:  3px solid white; */
+    width: 70%;
+}
+
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
